--- a/src/views/index.html
+++ b/src/views/index.html
@@ -2,11 +2,12 @@
 
 <div class="container">
     <h2>书籍列表</h2>
+    <hr />
     <div class="addBtn">
-        <button type="button" class="btn btn-primary">
-                <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+        <a class="btn btn-primary" href="/addBook">
+            <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
             添加书籍
-        </button>
+        </a>
     </div>
     <table class="table table-striped " style="table-layout:fixed">
         <thead>
