--- a/src/views/include/header.html
+++ b/src/views/include/header.html
@@ -25,10 +25,11 @@
           <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
               <li class="active"><a href="#">主页</a></li>
-              <li><a href="#list">书籍列表</a></li>
+              <li><a href="/">书籍列表</a></li>
+              <li><a href="/addBook">添加书籍</a></li>
               <li><a href="/login">登录</a></li>
-              <li><a href="#register">注册</a></li>
-              <li><a href="#about">关于我</a></li>
+              <li><a href="/register">注册</a></li>
+              <li><a href="/aboutMe">关于我</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
               <li class="active"><a href="./">我的</a></li>
