--- a/src/views/include/header.html
+++ b/src/views/include/header.html
@@ -24,7 +24,7 @@
           </div>
           <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-              <li class="active"><a href="#">主页</a></li>
+              <li class="active"><a href="/">主页</a></li>
               <li><a href="/">书籍列表</a></li>
               <li><a href="/addBook">添加书籍</a></li>
               <li><a href="/login">登录</a></li>
