--- a/src/views/success.html
+++ b/src/views/success.html
@@ -7,13 +7,23 @@
 <link rel="stylesheet" href="/public/css/bootstrap.min.css" />
 <link rel="stylesheet" href="/public/css/base.css" />
 <title>成功页面</title>
+<style>
+    body{background-color: #EFEFF1}
+</style>
 </head>
 <body>
     <div class="container">
         <div class="suucessWrap">
-            <p class="">提交成功！</p>
-            <div class="">
-                
+            <div class="resMessage">提交成功！</div>
+            <div class="resBtnWrap">
+                <a class="btn btn-primary" href="/">
+                    <span class="glyphicon glyphicon-home" aria-hidden="true"></span>
+                    首页
+                </a>
+                <a class="btn btn-primary" href="javascript:history.go(-1)">
+                    <span class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span>
+                    返回
+                </a>
             </div>
         </div>
     </div>
