--- a/src/views/addBook.html
+++ b/src/views/addBook.html
@@ -1,4 +1,4 @@
-<%- include('include/header.html', {title: title}); %>
+<% layout('layout') -%>
 
 <div class="container">
     <h2>添加书籍</h2>
@@ -26,4 +26,3 @@
       </form>
 </div>
 
-<%- include('include/footer.html'); %>
