--- a/src/views/index.html
+++ b/src/views/index.html
@@ -1,4 +1,4 @@
-<%- include('include/header.html', {title: title}); %>
+<% layout('layout') -%>
 
 <div class="container">
     <h2>书籍列表</h2>
@@ -38,4 +38,3 @@
     </table>
 </div>
 
-<%- include('include/footer.html'); %>
