--- a/src/views/login.html
+++ b/src/views/login.html
@@ -1,5 +1,5 @@
-<%- include('include/header.html');  %>
-<link rel="stylesheet" href="/public/css/login.css" />
+<% layout('layout') -%>
+<% stylesheet('/public/css/login.css') -%>
 
 <div class="container">
 
@@ -19,4 +19,4 @@
 
 </div>
 
-<%- include('include/footer.html');  %>
+
