--- a/src/views/success.html
+++ b/src/views/success.html
@@ -14,7 +14,7 @@
 <body>
     <div class="container">
         <div class="suucessWrap">
-            <div class="resMessage">提交成功！</div>
+            <div class="resMessage"><%= resMessage %></div>
             <div class="resBtnWrap">
                 <a class="btn btn-primary" href="/">
                     <span class="glyphicon glyphicon-home" aria-hidden="true"></span>
