--- a/src/views/success.html
+++ b/src/views/success.html
@@ -1,31 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta http-equiv="X-UA-Compatible" content="ie=edge">
-<link rel="stylesheet" href="/public/css/bootstrap.min.css" />
-<link rel="stylesheet" href="/public/css/base.css" />
-<title>成功页面</title>
-<style>
-    body{background-color: #EFEFF1}
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible"
+          content="ie=edge">
+    <link rel="stylesheet"
+          href="/public/css/bootstrap.min.css" />
+    <link rel="stylesheet"
+          href="/public/css/base.css" />
+    <title>成功页面</title>
+    <style>
+        body {
+            background-color: #EFEFF1
+        }
+    </style>
 </head>
+
 <body>
     <div class="container">
         <div class="suucessWrap">
             <div class="resMessage"><%= resMessage %></div>
             <div class="resBtnWrap">
-                <a class="btn btn-primary" href="/">
-                    <span class="glyphicon glyphicon-home" aria-hidden="true"></span>
+                <a class="btn btn-primary"
+                   href="/">
+                    <span class="glyphicon glyphicon-home"
+                          aria-hidden="true"></span>
                     首页
                 </a>
-                <a class="btn btn-primary" href="javascript:history.go(-1)">
-                    <span class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span>
+                <a class="btn btn-primary"
+                   href="javascript:history.go(-1)">
+                    <span class="glyphicon glyphicon-arrow-left"
+                          aria-hidden="true"></span>
                     返回
                 </a>
             </div>
         </div>
     </div>
 </body>
+
 </html>
