--- a/src/views/include/nav.html
+++ b/src/views/include/nav.html
@@ -1,27 +1,35 @@
 <!-- Fixed navbar -->
 <nav class="navbar navbar-default navbar-fixed-top">
-<div class="container">
-    <div class="navbar-header">
-    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-    </button>
-    <a class="navbar-brand" href="/">爱上阅读</a>
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button"
+                    class="navbar-toggle collapsed"
+                    data-toggle="collapse"
+                    data-target="#navbar"
+                    aria-expanded="false"
+                    aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand"
+               href="/">爱上阅读</a>
+        </div>
+        <div id="navbar"
+             class="navbar-collapse collapse">
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="/">书籍列表</a></li>
+                <li><a href="/addBook">添加书籍</a></li>
+                <li><a href="/login">登录</a></li>
+                <li><a href="/register">注册</a></li>
+                <li><a href="/aboutMe">关于我</a></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <li class="active"><a href="./">我的</a></li>
+                <li><a href="#">退出</a></li>
+            </ul>
+        </div>
+        <!--/.nav-collapse -->
     </div>
-    <div id="navbar" class="navbar-collapse collapse">
-    <ul class="nav navbar-nav">
-        <li class="active"><a href="/">书籍列表</a></li>
-        <li><a href="/addBook">添加书籍</a></li>
-        <li><a href="/login">登录</a></li>
-        <li><a href="/register">注册</a></li>
-        <li><a href="/aboutMe">关于我</a></li>
-    </ul>
-    <ul class="nav navbar-nav navbar-right">
-        <li class="active"><a href="./">我的</a></li>
-        <li><a href="#">退出</a></li>
-    </ul>
-    </div><!--/.nav-collapse -->
-</div>
 </nav>
