--- a/src/views/layout.html
+++ b/src/views/layout.html
@@ -1,21 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta http-equiv="X-UA-Compatible" content="ie=edge">
-<title><%= title %></title>
-<link rel="stylesheet" href="/public/css/bootstrap.min.css" />
-<link rel="stylesheet" href="/public/css/base.css" />
-<script type="text/javascript" src="/public/js/jquery.min.js"></script>
-<script type="text/javascript" src="/public/js/bootstrap.min.js"></script>
-<%- scripts %>
-<%- stylesheets %>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible"
+          content="ie=edge">
+    <title><%= title %></title>
+    <link rel="stylesheet"
+          href="/public/css/bootstrap.min.css" />
+    <link rel="stylesheet"
+          href="/public/css/base.css" />
+    <script type="text/javascript"
+            src="/public/js/jquery.min.js"></script>
+    <script type="text/javascript"
+            src="/public/js/bootstrap.min.js"></script>
+    <%- scripts %>
+    <%- stylesheets %>
 </head>
+
 <body ontouchstart="">
     <% include include/nav.html %>
 
     <%- body %>
 
 </body>
+
 </html>
