--- a/src/views/login.html
+++ b/src/views/login.html
@@ -4,19 +4,30 @@
 <div class="container">
 
     <form class="form-signin">
-      <h2 class="form-signin-heading">请登录</h2>
-      <label for="inputEmail" class="sr-only">用户名：</label>
-      <input type="email" id="inputEmail" class="form-control" placeholder="请输入用户名" required autofocus>
-      <label for="inputPassword" class="sr-only">密码：</label>
-      <input type="password" id="inputPassword" class="form-control" placeholder="请输入密码" required>
-      <div class="checkbox">
-        <label>
-          <input type="checkbox" value="remember-me"> 记住我
-        </label>
-      </div>
-      <button class="btn btn-lg btn-primary btn-block" type="submit">登 录</button>
+        <h2 class="form-signin-heading">请登录</h2>
+        <label for="inputEmail"
+               class="sr-only">用户名：</label>
+        <input type="email"
+               id="inputEmail"
+               class="form-control"
+               placeholder="请输入用户名"
+               required
+               autofocus>
+        <label for="inputPassword"
+               class="sr-only">密码：</label>
+        <input type="password"
+               id="inputPassword"
+               class="form-control"
+               placeholder="请输入密码"
+               required>
+        <div class="checkbox">
+            <label>
+                <input type="checkbox"
+                       value="remember-me"> 记住我
+            </label>
+        </div>
+        <button class="btn btn-lg btn-primary btn-block"
+                type="submit">登 录</button>
     </form>
 
 </div>
-
-
