--- a/src/views/modifyBook.html
+++ b/src/views/modifyBook.html
@@ -3,31 +3,56 @@
 <div class="container">
     <h2>修改书籍</h2>
     <hr />
-    <form method="post" action="" class="addBookWrap">
-        <input type="text" class="form-control" id="name" name="name" placeholder="书名" value="<%= book.id %>"
-            disabled="disabled">
+    <form method="post"
+          action="modifyBookForm"
+          class="addBookWrap">
+        <input type="hidden"
+               class="form-control"
+               id="id"
+               name="id"
+               value="<%= book.id %>"
+               readonly>
         <div class="form-group">
             <label for="name">书名:</label>
-            <input type="text" class="form-control" id="name" name="name" placeholder="书名" value="<%= book.name %>"
-                required>
+            <input type="text"
+                   class="form-control"
+                   id="name"
+                   name="name"
+                   placeholder="书名"
+                   value="<%= book.name %>"
+                   required>
         </div>
         <div class="form-group">
             <label for="author">作者:</label>
-            <input type="text" class="form-control" id="author" name="author" placeholder="作者"
-                value="<%= book.author %>" required>
+            <input type="text"
+                   class="form-control"
+                   id="author"
+                   name="author"
+                   placeholder="作者"
+                   value="<%= book.author %>"
+                   required>
         </div>
         <div class="form-group">
             <label for="type">类型:</label>
-            <input type="text" class="form-control" id="type" name="type" placeholder="类型" value="<%= book.type %>"
-                required>
+            <input type="text"
+                   class="form-control"
+                   id="type"
+                   name="type"
+                   placeholder="类型"
+                   value="<%= book.type %>"
+                   required>
         </div>
         <div class="form-group">
             <label for="exampleInputFile">描述:</label>
             <div>
-                <textarea id="descript" name="descript" class="form-control" rows="5"
-                    required><%= book.descript %></textarea>
+                <textarea id="descript"
+                          name="descript"
+                          class="form-control"
+                          rows="5"
+                          required><%= book.descript %></textarea>
             </div>
         </div>
-        <button type="submit" class="btn btn-primary  btn-lg">添加</button>
+        <button type="submit"
+                class="btn btn-primary  btn-lg"> 修改</button>
     </form>
 </div>
