登录页面完成

--- a/src/views/success.html
+++ b/src/views/success.html
@@ -11,7 +11,7 @@
           href="/public/css/bootstrap.min.css" />
     <link rel="stylesheet"
           href="/public/css/base.css" />
-    <title>成功页面</title>
+    <title>跳转页面</title>
     <style>
         body {
             background-color: #EFEFF1
