--- a/src/views/login.html
+++ b/src/views/login.html
@@ -3,20 +3,24 @@
 
 <div class="container">
 
-    <form class="form-signin">
+    <form method="POST"
+          action="loginForm"
+          class="form-signin">
         <h2 class="form-signin-heading">请登录</h2>
-        <label for="inputEmail"
+        <label for="name"
                class="sr-only">用户名：</label>
-        <input type="email"
-               id="inputEmail"
+        <input type="name"
+               id="name"
+               name="name"
                class="form-control"
                placeholder="请输入用户名"
                required
                autofocus>
-        <label for="inputPassword"
+        <label for="password"
                class="sr-only">密码：</label>
         <input type="password"
-               id="inputPassword"
+               id="password"
+               name="password"
                class="form-control"
                placeholder="请输入密码"
                required>
